test/errors/segend.err
Error: segend.asm: 9: a segment is open: main:
    END start
    ^
Errors: 1
